--- a/index.html
+++ b/index.html
@@ -18,6 +18,59 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Hello world</h1>
+  <header>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <div class="nav-center">
+        <!-- nav header -->
+        <div class="nav-header">
+          <i class="fas fa-bars nav-icon"></i>
+          <p>Influencer products</p>
+          <div>
+            <!-- nav links -->
+            <ul class="nav-links">
+              <!-- single link -->
+              <li>
+                <a href="#" class="nav-link">Home</a>
+              </li>
+              <!-- end of single link -->
+              <!-- single link -->
+              <li>
+                <a href="#" class="nav-link">Products</a>
+              </li>
+              <!-- end of single link -->
+              <!-- single link -->
+              <li>
+                <a href="#" class="nav-link">Sign up</a>
+              </li>
+              <!-- end of single link -->
+              <!-- single link -->
+              <li>
+                <a href="#" class="nav-link">Log in</a>
+              </li>
+              <!-- end of single link -->
+              <!-- single link -->
+              <li>
+                <i class="fas fa-search nav-icon nav-link"></i>
+              </li>
+              <!-- end of single link -->
+              <!-- single link -->
+              <li>
+                <i class="fas fa-shopping-cart nav-icon"></i>
+              </li>
+              <!-- end of single link -->
+            </ul>
+            <!-- nav links -->
+          </div>
+        </div>
+        <!-- end of nav header -->
+      </div>
+    </nav>
+    <!-- End of Navbar -->
+  </header>
 </body>
 </html>
+
+<!-- <i class="fas fa-bars"></i> -->
+<!-- <i class="fas fa-search"></i> -->
+<!-- <i class="fas fa-shopping-cart"></i> -->
