Banner section added

--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
       </div>
     </nav>
     <!-- End of Navbar -->
+
+    <!-- Banner Section -->
+    <section class="section-center section-banner">
+      <div class="banner-container">
+        <img src="./images/main-camera.png" alt="main camera">
+        <div class="banner-info">
+          <h1>start your journey as influencer</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Veniam quibusdam sunt a quo expedita.</p>
+          <a href="#" class="btn btn-prebook">prebook now<i class="fas fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </section>
+    <!-- End of Banner Section -->
   </header>
 </body>
 </html>
