--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <!-- Header Section -->
   <header>
     <!-- Navbar -->
     <nav class="navbar">
@@ -82,6 +83,23 @@
     </section>
     <!-- End of Banner Section -->
   </header>
+  <!-- End of Header Section -->
+
+  <!-- Main Section -->
+  <main>
+    <section class="section-center section-company-logo">
+      <div class="logo-container">
+        <img class="logo" src="./logos/Alibaba.svg" alt="alibaba">
+        <img class="logo" src="./logos/Amazon.svg" alt="amazon">
+        <img class="logo" src="./logos/Daraz.pk Logo.svg" alt="daraz">
+        <img class="logo" src="./logos/Ebay.svg" alt="ebay">
+        <img class="logo" src="./logos/Rakuten.svg" alt="rakuten">
+        <img class="logo" src="./logos/Target.svg" alt="target">
+        <img class="logo" src="./logos/Walmart.svg" alt="walmart">
+      </div>
+    </section>
+  </main>
+  <!-- End of Main Section -->
 </body>
 </html>
 
