popular collection section added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
   <!-- Main Section -->
   <main>
+    <!-- Company logo section -->
     <section class="section-center section-company-logo">
       <div class="logo-container">
         <img class="logo" src="./logos/Alibaba.svg" alt="alibaba">
@@ -98,6 +99,224 @@
         <img class="logo" src="./logos/Walmart.svg" alt="walmart">
       </div>
     </section>
+    <!-- End of Company logo section -->
+
+    <!-- Popular Collection -->
+    <section class="section-center section-popular-collection">
+      <h1>popular collection</h1>
+      <div class="collection-container">
+        <!-- Single Item 1-->
+        <div class="single-item">
+          <img src="./images/tripod.png" alt="tripod">
+          <div class="item-info">
+            <h2>flex tripod</h2>
+            <h3>$50.48</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 1-->
+
+        <!-- Single Item 2-->
+        <div class="single-item">
+          <img src="./images/mic.png" alt="microphone">
+          <div class="item-info">
+            <h2>microphone</h2>
+            <h3>$120.25</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 2-->
+
+        <!-- Single Item 3-->
+        <div class="single-item">
+          <img src="./images/airpod.png" alt="airbuds">
+          <div class="item-info">
+            <h2>airbuds</h2>
+            <h3>$100.00</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 3-->
+
+        <!-- Single Item 4-->
+        <div class="single-item">
+          <img src="./images/drone.png" alt="drone">
+          <div class="item-info">
+            <h2>drone</h2>
+            <h3>$980.25</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 4-->
+
+        <!-- Single Item 5-->
+        <div class="single-item">
+          <img src="./images/lights.png" alt="light setup">
+          <div class="item-info">
+            <h2>light setup</h2>
+            <h3>$1200.00</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 5-->
+
+        <!-- Single Item 6-->
+        <div class="single-item">
+          <img src="./images/setup.png" alt="photoshoot set">
+          <div class="item-info">
+            <h2>photoshoot set</h2>
+            <h3>$820.40</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 6-->
+
+        <!-- Single Item 7-->
+        <div class="single-item">
+          <img src="./images/camera.png" alt="vlogging camera">
+          <div class="item-info">
+            <h2>vlogging camera</h2>
+            <h3>$1800.80</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 7-->
+
+        <!-- Single Item 8-->
+        <div class="single-item">
+          <img src="./images/single-light.png" alt="green screen">
+          <div class="item-info">
+            <h2>green screen</h2>
+            <h3>$25.48</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 8-->
+
+        <!-- Single Item 9-->
+        <div class="single-item">
+          <img src="./images/action.png" alt="action camera">
+          <div class="item-info">
+            <h2>action camera</h2>
+            <h3>$380.00</h3>
+            <div class="item-rating-info">
+              <div class="item-rating-star">
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-enable"></i>
+                <i class="fas fa-star star-disable"></i>
+              </div>
+              <p class="item-rating-number">4.5</p>
+            </div>
+            <p>worldwide shifting</p>
+            <p>available</p>
+            <p>buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- End of Single Item 9-->
+      </div>
+      <div class="see-more">
+        <p>See More <i class="fas fa-arrow-right"></i></p>
+      </div>
+    </section>
+    <!-- End of Popular Collection -->
   </main>
   <!-- End of Main Section -->
 </body>
