photo gallery section added

--- a/index.html
+++ b/index.html
@@ -317,6 +317,59 @@
       </div>
     </section>
     <!-- End of Popular Collection -->
+
+    <!-- Photo Gallery -->
+    <section class="section-center section-photo-gallery">
+      <h1>photo gallery</h1>
+      <div class="photo-container">
+        <!-- Single photo 1-->
+        <div class="photo-1">
+          <img src="./nature-images/1.jpg" alt="photo 1">
+        </div>
+        <!-- End of Single photo 1-->
+        <!-- Single photo 2-->
+        <div class="photo-2">
+          <img src="./nature-images/2.jpg" alt="photo 2">
+        </div>
+        <!-- End of Single photo 2-->
+        <!-- Single photo 3-->
+        <div class="photo-3">
+          <img src="./nature-images/3.jpg" alt="photo 3">
+        </div>
+        <!-- End of Single photo 3-->
+        <!-- Single photo 4-->
+        <div class="photo-4">
+          <img src="./nature-images/4.jpg" alt="photo 4">
+        </div>
+        <!-- End of Single photo 4-->
+        <!-- Single photo 5-->
+        <div class="photo-5">
+          <img src="./nature-images/5.jpg" alt="photo 5">
+        </div>
+        <!-- End of Single photo 5-->
+        <!-- Single photo 6-->
+        <div class="photo-6">
+          <img src="./nature-images/6.jpg" alt="photo 6">
+        </div>
+        <!-- End of Single photo 6-->
+        <!-- Single photo 7-->
+        <div class="photo-7">
+          <img src="./nature-images/7.jpg" alt="photo 7">
+        </div>
+        <!-- End of Single photo 7-->
+        <!-- Single photo 8-->
+        <div class="photo-8">
+          <img src="./nature-images/8.jpg" alt="photo 8">
+        </div>
+        <!-- End of Single photo 8-->
+        <!-- Single photo 9-->
+        <div class="photo-9">
+          <img src="./nature-images/9.jpg" alt="photo 9">
+        </div>
+        <!-- End of Single photo 9-->
+      </div>
+    </section>
+    <!-- End of Photo Gallery -->
   </main>
   <!-- End of Main Section -->
 </body>
