footer section added

--- a/index.html
+++ b/index.html
@@ -372,9 +372,21 @@
     <!-- End of Photo Gallery -->
   </main>
   <!-- End of Main Section -->
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-container">
+      <h3>influencer products</h3>
+      <p>Copyright &copy; Influencer Products</p>
+      <p>All Right Reserved</p>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+      </div>
+    </div>
+  </footer>
+  <!-- End of Footer -->
 </body>
 </html>
-
-<!-- <i class="fas fa-bars"></i> -->
-<!-- <i class="fas fa-search"></i> -->
-<!-- <i class="fas fa-shopping-cart"></i> -->
