button animation added, added real text

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <img src="./images/main-camera.png" alt="main camera">
         <div class="banner-info">
           <h1>start your journey as influencer</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Veniam quibusdam sunt a quo expedita.</p>
+          <p>You can do anything. The only step you need to take is to increase 
+            your willpower. So buy today and explore tomorrow!!!</p>
           <a href="#" class="btn btn-prebook">prebook now<i class="fas fa-arrow-right"></i></a>
         </div>
       </div>
