--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <!-- Banner Section -->
     <section class="section-center section-banner">
-      <div class="banner-container">
+      <article class="banner-container">
         <img src="./images/main-camera.png" alt="main camera">
         <div class="banner-info">
           <h1>start your journey as influencer</h1>
@@ -79,7 +79,7 @@
             your willpower. So buy today and explore tomorrow!!!</p>
           <a href="#" class="btn btn-prebook">prebook now<i class="fas fa-arrow-right"></i></a>
         </div>
-      </div>
+      </article>
     </section>
     <!-- End of Banner Section -->
   </header>
@@ -106,7 +106,7 @@
       <h1>popular collection</h1>
       <div class="collection-container">
         <!-- Single Item 1-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/tripod.png" alt="tripod">
           <div class="item-info">
             <h2>flex tripod</h2>
@@ -125,11 +125,11 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 1-->
 
         <!-- Single Item 2-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/mic.png" alt="microphone">
           <div class="item-info">
             <h2>microphone</h2>
@@ -148,11 +148,11 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 2-->
 
         <!-- Single Item 3-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/airpod.png" alt="airbuds">
           <div class="item-info">
             <h2>airbuds</h2>
@@ -171,11 +171,11 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 3-->
 
         <!-- Single Item 4-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/drone.png" alt="drone">
           <div class="item-info">
             <h2>drone</h2>
@@ -194,11 +194,11 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 4-->
 
         <!-- Single Item 5-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/lights.png" alt="light setup">
           <div class="item-info">
             <h2>light setup</h2>
@@ -217,11 +217,11 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 5-->
 
         <!-- Single Item 6-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/setup.png" alt="photoshoot set">
           <div class="item-info">
             <h2>photoshoot set</h2>
@@ -240,11 +240,11 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 6-->
 
         <!-- Single Item 7-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/camera.png" alt="vlogging camera">
           <div class="item-info">
             <h2>vlogging camera</h2>
@@ -263,11 +263,11 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 7-->
 
         <!-- Single Item 8-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/single-light.png" alt="green screen">
           <div class="item-info">
             <h2>green screen</h2>
@@ -286,11 +286,11 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 8-->
 
         <!-- Single Item 9-->
-        <div class="single-item">
+        <article class="single-item">
           <img src="./images/action.png" alt="action camera">
           <div class="item-info">
             <h2>action camera</h2>
@@ -309,7 +309,7 @@
             <p>available</p>
             <p>buyers protection possible!</p>
           </div>
-        </div>
+        </article>
         <!-- End of Single Item 9-->
       </div>
       <div class="see-more">
@@ -323,49 +323,49 @@
       <h1>photo gallery</h1>
       <div class="photo-container">
         <!-- Single photo 1-->
-        <div class="photo-1">
+        <article class="photo-1">
           <img src="./nature-images/1.jpg" alt="photo 1">
-        </div>
+        </article>
         <!-- End of Single photo 1-->
         <!-- Single photo 2-->
-        <div class="photo-2">
+        <article class="photo-2">
           <img src="./nature-images/2.jpg" alt="photo 2">
-        </div>
+        </article>
         <!-- End of Single photo 2-->
         <!-- Single photo 3-->
-        <div class="photo-3">
+        <article class="photo-3">
           <img src="./nature-images/3.jpg" alt="photo 3">
-        </div>
+        </article>
         <!-- End of Single photo 3-->
         <!-- Single photo 4-->
-        <div class="photo-4">
+        <article class="photo-4">
           <img src="./nature-images/4.jpg" alt="photo 4">
-        </div>
+        </article>
         <!-- End of Single photo 4-->
         <!-- Single photo 5-->
-        <div class="photo-5">
+        <article class="photo-5">
           <img src="./nature-images/5.jpg" alt="photo 5">
-        </div>
+        </article>
         <!-- End of Single photo 5-->
         <!-- Single photo 6-->
-        <div class="photo-6">
+        <article class="photo-6">
           <img src="./nature-images/6.jpg" alt="photo 6">
-        </div>
+        </article>
         <!-- End of Single photo 6-->
         <!-- Single photo 7-->
-        <div class="photo-7">
+        <article class="photo-7">
           <img src="./nature-images/7.jpg" alt="photo 7">
-        </div>
+        </article>
         <!-- End of Single photo 7-->
         <!-- Single photo 8-->
-        <div class="photo-8">
+        <article class="photo-8">
           <img src="./nature-images/8.jpg" alt="photo 8">
-        </div>
+        </article>
         <!-- End of Single photo 8-->
         <!-- Single photo 9-->
-        <div class="photo-9">
+        <article class="photo-9">
           <img src="./nature-images/9.jpg" alt="photo 9">
-        </div>
+        </article>
         <!-- End of Single photo 9-->
       </div>
     </section>
